 - [ZBXNEXT-457] added support of nanoseconds for history tables (Sasha)
 - [DEV-449] added display of host time in screens (Aly)
 - [DEV-449] added system.localtime[local] check (Sasha)
 - [DEV-444] added optional suppressing of processing of older data in log[], logrt[] and eventlog[] (Sasha)

--------------------------------------------------------------------------------
Changes for 1.8.6rc1

 - [ZBX-3826] fixed recovering unsupported icmpping* items when a key has been entered incorrectly (Sasha)
 - [ZBX-3417] fixed "Do" button in item form (KB)
 - [ZBX-3417] removed trailing and leading space from phrase " - all groups - " (Alexei)
 - [ZBX-3806] fixed HTTP pollers being started on Zabbix proxy (asaveljevs)
 - [ZBX-3808] updated Brazilian Portuguese translation; thanks to Murilo Moreira de Oliveira (Alexei)
 - [ZBX-3682] fixed import of map elements having empty label; thanks to Takanori Suzuki (Alexei)
 - [ZBX-3679] fixed incorrect "No nodes defined" when screen selection popup has no elements (Alexei)
 - [ZBX-3638] fixed displaying of vertical text in case of special HTML characters (Alexei)
 - [ZBX-3801] added check for duplicate template IDs when creating host through API (KB)
 - [ZBX-3802] fixed error when try to open custom screen from history link (Vedmak)
 - [ZBX-3794] added timeout support to vfs.file.* commands (dimir)
 - [ZBX-3747] replaced strcpy() and vsnprintf() calls with safer ones and strerror() with zbx_strerror() which also prints the error code (rudolfs)
 - [ZBX-3760] fixed the CPU collector for processing the non-contiguous CPU IDs (Sasha)
 - [ZBX-3796] select a graph with the same name if it exists when changing host in monitoring -> graphs (KB)
 - [ZBX-3776] treat duplicate UserParameter as error (dimir)
 - [ZBX-3728] fixed a warning message when removing a user script (Alexei)
 - [ZBX-3731] fixed possible SQL errors when updating trends (Sasha)
 - [ZBX-3772] improved performance of the history syncer (Sasha)