@@ -991,7 +991,7 @@ static void	DCmass_update_triggers(ZBX_DC_HISTORY *history, int history_num)
 		if (SUCCEED != evaluate_expression(&exp_value, &tr[i].exp, tr[i].ts.sec,
 					tr[i].triggerid, tr[i].value, error, sizeof(error)))
 		{
-			zabbix_log(LOG_LEVEL_WARNING, "Expression [%s] cannot be evaluated: %s", tr[i].exp, error);
+			zabbix_log(LOG_LEVEL_DEBUG, "expression [%s] cannot be evaluated: %s", tr[i].exp, error);
 
 			DBupdate_trigger_value(tr[i].triggerid, tr[i].type, tr[i].value, tr[i].value_flags,
 					tr[i].error, tr[i].value, TRIGGER_VALUE_FLAG_UNKNOWN, &tr[i].ts, error);
@@ -1236,19 +1236,16 @@ static void	DCmass_update_items(ZBX_DC_HISTORY *history, int history_num)
 
 			if (ITEM_STATUS_NOTSUPPORTED == status)
 			{
-				const char	*hostkey_name;
-
-				hostkey_name = zbx_host_key_string(h->itemid);
-
 				message = zbx_dsprintf(message, "Received value [" ZBX_FS_DBL "]"
 						" is not suitable for value type [%s]",
 						h->value.value_float,
 						zbx_item_value_type_string(h->value_type));
 
-				zabbix_log(LOG_LEVEL_WARNING, "Item [%s] error: %s", hostkey_name, message);
-
 				if (ITEM_STATUS_NOTSUPPORTED != item.status)
-					zabbix_log(LOG_LEVEL_WARNING, "Item [%s] is not supported", hostkey_name);
+				{
+					zabbix_log(LOG_LEVEL_WARNING, "Item [%s] became unsupported: %s",
+							zbx_host_key_string(h->itemid), message);
+				}
 
 				DCadd_nextcheck(h->itemid, h->clock, message);	/* update error & status field in items table */
 				DCrequeue_reachable_item(h->itemid, ITEM_STATUS_NOTSUPPORTED, h->clock);
